<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rss Reader</string>
    <string name="hello_world">Hello world 101!</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_share">Share</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_source_manager">SourceManagerActivity</string>
    <string name="title_activity_collection">My Collection</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="category_id">id</string>
    <string name="database_name">rss_db</string>
    <string name="drawer_title_allcategory">All</string>
    <string name="drawer_title_library">My Library</string>
    <string name="drawer_title_settings">Settings</string>
    <string name="title_activity_feed_list">FeedListActivity</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="title_activity_edit_source">Edit Source</string>
    <string name="label_title">Title</string>
    <string name="label_category">Category</string>
    <string name="label_uri">Source URL</string>
    <string name="title_activity_add_source">New Source</string>
    <string name="general_search_hint">Search</string>
    <string name="spinner_category">Category</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="text_no_result">No results</string>
    <string name="text_empty_list">Empty</string>
    <string name="text_back">Back</string>
    <string name="text_add_whole_category">Add this category</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

</resources>
