<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="assignment.rssviewer.activity.EditSourceActivity">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/label_uri"/>

	<TextView
		android:id="@+id/uriText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/label_title"/>

	<EditText
		android:id="@+id/titleText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="text"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/label_category"/>

	<Spinner
		android:id="@+id/categorySpinner"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

</LinearLayout>
