<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text_back"
			android:id="@+id/backButton"/>

		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/text_add_whole_category"
			android:id="@+id/addWholeButton"/>

	</LinearLayout>

	<ListView
		android:id="@+id/lvSources"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"/>

	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:visibility="gone"
		android:id="@+id/supportWidget">

		<ProgressBar
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:id="@+id/busyIndicator"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textIsSelectable="false"
			android:layout_centerInParent="true"
			android:text="@string/text_no_result"
			android:id="@+id/emptyText"/>

	</RelativeLayout>

</LinearLayout>